@@ -6,13 +6,12 @@ import org.springframework.transaction.annotation.Transactional;
 import success.planfit.entity.like.PostLike;
 import success.planfit.entity.post.Post;
 import success.planfit.entity.user.User;
-import success.planfit.repository.CoursePostRepository;
 import success.planfit.repository.PostLikeRepository;
+import success.planfit.repository.PostRepository;
 import success.planfit.repository.UserRepository;
 import success.planfit.user.service.UserService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,17 +19,14 @@ import java.util.stream.Collectors;
 public class PostLikeService {
 
     private final PostLikeRepository postLikeRepository;
-    private final PostService postService;
-    private final UserService userService;
     private final UserRepository userRepository;
-    private final CoursePostRepository coursePostRepository;
+    private final PostRepository postRepository;
 
     public void likePost(Long postId, Long userId) {
-
         User user = userRepository.findById(userId).
                 orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자입니다."));
 
-        Post post = coursePostRepository.findById(postId)
+        Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 포스팅입니다."));
 
         postLikeRepository.findByUserIdAndPostId(userId, postId)
@@ -38,15 +34,19 @@ public class PostLikeService {
                     throw new IllegalArgumentException("이미 좋아요한 포스트입니다.");
                 });
 
-        postLikeRepository.save(new PostLike(user, post));
+        postLikeRepository.save(PostLike.builder()
+                .user(user)
+                .post(post)
+                .build());
         post.increaseLikeCount();
     }
 
+    @Transactional(readOnly = true)
     public List<Long> getLikedPosts(Long userId) {
         return postLikeRepository.findByUserId(userId).
                 stream()
                 .map(like -> like.getPost().getId())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void unlikePost(Long postId, Long userId) {
@@ -57,10 +57,5 @@ public class PostLikeService {
         postLike.getPost().decreaseLikeCount();
     }
 
-
-
-
-
-
-    }
+}
 
